--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,16 +1,20 @@
 <head>
-    <!-- UIkit CSS -->
+  
+
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+   
+    <link rel='stylesheet' href='/stylesheets/footer.css' />
+    <link rel="stylesheet" href='/stylesheets/circles.css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+      <!-- UIkit CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
 
 	<!-- UIkit JS -->
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
-
-
-   
-    <link rel='stylesheet' href='/stylesheets/footer.css' />
-    <link rel="stylesheet" href='/stylesheets/circles.css'>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
  
 <div class="footer-wrapper-form">
@@ -63,11 +67,9 @@
                 <div class="uk-background-cover" style="background-image: url('../images/three.jpeg'); " uk-height-viewport></div>
                 <div class="uk-padding-large">
                     <h2>Свяжитесь со мной</h2>
-                    <div class="uk-margin">
+                    <div class="uk-form-controls">
                         <label class="uk-form-label" for="form-stacked-text">Имя и фамилия</label>
-                        <div class="uk-form-controls">
-                            <input class="uk-input" name="name" id="form-stacked-text" type="text" placeholder="">
-                        </div>
+                        <input class="uk-input" name="name" id="form-stacked-text" type="text" placeholder="">
                     </div>
                     <div class="uk-margin">
                         <label class="uk-form-label" for="form-stacked-text">Телефон</label>
@@ -75,49 +77,18 @@
                             <input class="uk-input" name="mobile" id="form-stacked-text" type="text" placeholder="">
                         </div>
                     </div>
+                    <div class="uk-form-controls">
+                        <input class="uk-input" name="mobile" id="form-stacked-text" type="text" placeholder="">
+                    </div>
                     <div class="uk-margin">
                         <textarea class="uk-textarea" id="form-s-textarea" rows="5" placeholder="Сообщение..." name="text"></textarea>
                     </div>
-                    <div uk-alert>Гарантируем сохранность личных данных.</div>
+                    <div uk-alert="" class="uk-alert">Гарантируем сохранность личных данных.</div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-              
-                <div class="modal-header">
-                
-                  <h5 class="modal-title" id="exampleModalLabel">Свяжитесь со мной</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                
-                <div class="modal-body">
-                <form action="/contactUs" method="POST" >
-                    <div class="form-group">
-                      <label for="user-name"  class="col-form-label">Имя:</label>
-                      <input type="text" name="name" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="user-mobile" class="col-form-label">Телефон:</label>
-                        <input class="form-control" name="mobile" type="text" required>
-                    </div>
-                    <div class="form-group">
-                      <label for="message-text"  class="col-form-label">Сообщение</label>
-                      <textarea class="form-control" name="text"></textarea>
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
-                    <input type="submit" class="btn btn-primary" value="Свяжитесь со мной"></input>
-                  </div>
-              </form>
-          </div>
-        </div>
-    </div>
+    
 </div>
 
 
