--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
 
                         
                     
-                        <div class="swiper-slide" style="background-color: transparent;">
+                        <div class="swiper-slide swiper-lazy" style="background-color: transparent;">
                             <a href="/projects/<%= project.id %>"><img class="title-image image-gallery"
                                 src="<%= project.images[0].url %>"
                                 alt="<%= project.title %>"></a>       
@@ -175,7 +175,7 @@
 
                         
                     
-                        <div class="swiper-slide" style="background-color: transparent;">
+                        <div class="swiper-slide swiper-lazy" style="background-color: transparent;">
                             <a href="/articles/<%= article.id %>"><img class="title-image image-gallery"
                                 src="<%= article.images[0].url %>"
                                 alt="<%= article.title %>"></a>       
