--- a/public/stylesheets/search-article.css
+++ b/public/stylesheets/search-article.css
@@ -11,7 +11,10 @@
     align-items: center;
 }
 
-
+fieldset {
+  border: none;
+  margin:0 !important;
+}
 
 .search-input {
     max-width:1536px;
