--- a/public/stylesheets/search-filter.css
+++ b/public/stylesheets/search-filter.css
@@ -16,6 +16,10 @@ body {
     flex-wrap: wrap;
 }
 
+.input-text-head, .input-submit-head {
+  cursor: pointer;
+}
+
 
 .input-submit-head {
   background-image: linear-gradient(307.84deg, #F34B31 -11.35%, #FFA782 106.98%);
@@ -45,6 +49,7 @@ body {
   color: #2F3B43;
   background: url('../images/ellipsis.png') no-repeat;
   background-position:  center right ;
+  
 }
 
 .small {
@@ -138,10 +143,18 @@ input[type=number] {
   box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.05) !important;
   border-radius: 3px;
   text-align: center;
-  top:-23px !important;
+  top:113px !important;
   margin-top:20px !important;
-  padding:23px 81px;
+  padding:23px 81px ; 
   width:260px !important;
+}
+
+.uk-active  {
+  margin-bottom: 12px !important;
+}
+
+.uk-dropdown-close-bedrooms {
+  margin-bottom: 6px;
 }
 
 .uk-active label {
