--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
                                 src="<%= project.images[0].url %>"
                                 alt="<%= project.title %>"></a>       
                             <h2 class="project-title-index"><%= project.title %></h2>
-                            <h5 class="project-short-info"> Месторасположение:  <%= project.location %></h5>
+                            <h5 class="project-short-info">  <%= project.area %> м2 | <%= project.bedrooms %> спальни</h5>
                             <a class="project-price-index" href="/projects/<%= project.id %>"><div>Цена от: <%= project.price %>$</div></a>      
                         </div> 
                         
@@ -142,10 +142,10 @@
     <h3 class="title-second-mobile proposition">Предложения для каждого</h3>
     <div class="goals-images-wrapper">
         <div class="image-goal-wrapper">
-            <div class="card-image goal-image" style="background-image: url('../images/personal-middle.png');" data-image-full="../images/personal.png">
+            <div class="card-image goal-image" data-image-full="../images/personal.png">
                 <img src="../images/personal-middle.png" alt="Personal" />    
             </div>
-            <a class="bottom-text goal-text" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%9B%D0%B8%D1%87%D0%BD%D0%BE%D0%B5+%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&seaDistance=&area=">Личное использование</a>
+            <a class="bottom-text goal-text"  href="http://localhost:3000/projects?location=&price%5Bmin%5D=&price%5Bmax%5D=&area%5Bmin%5D=&area%5Bmax%5D=&seaDistance=&appointment=%D0%9B%D0%B8%D1%87%D0%BD%D0%BE%D0%B5+%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&search=">Личное использование</a>
         </div>
         <div class="image-goal-wrapper">
             <div class="card-image goal-image margin-image" style="background-image: url('../images/rent-middle.png');" data-image-full="../images/rent.png">
