--- a/public/stylesheets/404.css
+++ b/public/stylesheets/404.css
@@ -1,16 +1,18 @@
 body {
     font-weight:500;
     font-family: "Lato-Regular";
+    
 }
 
 .wrapper-not-found {
     width: 100%;
     max-width:800px;
     height: auto;
-    margin: 32px auto;
+    margin: 16px auto;
     padding:0 16px;
     text-align: center;
     position: relative;
+    
 }
 
 a {
@@ -26,7 +28,7 @@ a:hover {
 
 
 .not-found-title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'GothamPro';
     font-weight: bold;
     max-width: 600px;
     margin: 0 auto 40px;
