--- a/public/stylesheets/index-second-section.css
+++ b/public/stylesheets/index-second-section.css
@@ -102,7 +102,7 @@
       
     
     .title-proposition {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'GothamPro';
         font-size: 54px;
         line-height: 52px;
         color: #4B535F;
