--- a/public/stylesheets/article-index.css
+++ b/public/stylesheets/article-index.css
@@ -15,7 +15,7 @@
 
        
 .title-text {
-    font-family: 'Montserrat';
+    font-family: 'GothamPro';
     font-size: 65.6106px;
     line-height: 114.9%;
     color: #4B535F;
