--- a/public/stylesheets/contacts.css
+++ b/public/stylesheets/contacts.css
@@ -25,7 +25,7 @@
 
 
 .contact-main-info {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'GothamPro';
     
     /* or 75px */
     font-size: 30px;
