--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,10 +11,17 @@ body {
 }
 
 @font-face {
-  font-family: "Lato-Regular";
-
+  font-family: "Lato-Regular";  
   src: url("../fonts/Lato-Regular.woff2") format("woff2"); /* Modern Browsers */
   font-weight: normal;
   font-style: normal;
        
+}
+
+
+@font-face {
+  font-family: "GothamPro";
+  src: url("../fonts/GothamPro-Medium.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
 }
