--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
                                 alt="<%= project.title %>"></a>       
                             <h2 class="project-title-index"><%= project.title %></h2>
                             <h5 class="project-short-info">  <%= project.area %> м2 | <%= project.bedrooms %> спальни</h5>
-                            <a class="project-price-index" href="/projects/<%= project.id %>"><div>Цена от: <%= project.price %>$</div></a>      
+                            <a class="project-price-index" href="/projects/<%= project.id %>"><div><%= project.price %>$</div></a>      
                         </div> 
                         
                     
@@ -142,25 +142,28 @@
     <h3 class="title-second-mobile proposition">Предложения для каждого</h3>
     <div class="goals-images-wrapper">
         <div class="image-goal-wrapper">
-            <div class="card-image goal-image" data-image-full="../images/personal.png">
-                <img src="../images/personal-middle.png" alt="Personal" />    
-            </div>
-            <a class="bottom-text goal-text"  href="http://localhost:3000/projects?location=&price%5Bmin%5D=&price%5Bmax%5D=&area%5Bmin%5D=&area%5Bmax%5D=&seaDistance=&appointment=%D0%9B%D0%B8%D1%87%D0%BD%D0%BE%D0%B5+%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&search=">Личное использование</a>
-        </div>
-        <div class="image-goal-wrapper">
-            <div class="card-image goal-image margin-image" style="background-image: url('../images/rent-middle.png');" data-image-full="../images/rent.png">
-                <img src="../images/rent-middle.png" alt="Rent" />    
-            </div>
+            <a class="card-image goal-image" data-image-full="../images/personal.png" href="http://localhost:3000/projects?location=&price%5Bmin%5D=&price%5Bmax%5D=&area%5Bmin%5D=&area%5Bmax%5D=&seaDistance=&appointment=%D0%9B%D0%B8%D1%87%D0%BD%D0%BE%D0%B5+%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&search=">
+                <img src="../images/personal-middle.png" alt="Personal" /> 
+                <a class="bottom-text goal-text">Личное использование</a>   
+            </a>
             
-            <a class="bottom-text goal-text" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%90%D1%80%D0%B5%D0%BD%D0%B4%D0%B0&seaDistance=&area=">Аренда</a>
         </div>
         <div class="image-goal-wrapper">
-            <div class="card-image goal-image" style="background-image: url('../images/invest-middle.png');" data-image-full="../images/invest.png">
-                <img src="../images/invest-middle.png" alt="Invest" />    
-            </div>
-            <div class="top-text goal-text">Хотите инвестировать?</div>
-            <div class="centered-text goal-text">Доходность 17 - 30%</div>
-            <a class="bottom-text goal-text" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%98%D0%BD%D0%B2%D0%B5%D1%81%D1%82%D0%B8%D1%86%D0%B8%D0%B8&seaDistance=&area=">Инвестиции</a>
+            <a class="card-image goal-image margin-image" style="background-image: url('../images/rent-middle.png');" data-image-full="../images/rent.png" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%90%D1%80%D0%B5%D0%BD%D0%B4%D0%B0&seaDistance=&area=">
+                <img src="../images/rent-middle.png" alt="Rent" />
+                <a class="bottom-text goal-text" >Аренда</a>    
+            </a>
+            
+            
+        </div>
+        <div class="image-goal-wrapper">
+            <a class="card-image goal-image" style="background-image: url('../images/invest-middle.png');" data-image-full="../images/invest.png" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%98%D0%BD%D0%B2%D0%B5%D1%81%D1%82%D0%B8%D1%86%D0%B8%D0%B8&seaDistance=&area=">
+                <img src="../images/invest-middle.png" alt="Invest" />
+                <div class="top-text goal-text">Хотите инвестировать?</div>
+                <div class="centered-text goal-text">Доходность 17 - 30%</div>
+                <a class="bottom-text goal-text" >Инвестиции</a>    
+            </a>
+            
         </div>
         
         
