--- a/public/stylesheets/index-first-section.css
+++ b/public/stylesheets/index-first-section.css
@@ -125,19 +125,7 @@
   }
   
   
-  .input-submit-head {
-    background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
-    padding: 14px 175px;
-    margin:10px auto;
-    color:white;
-    border:none;
-    text-transform: uppercase;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 19px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+  
   
   
   .input-text-head {
@@ -153,13 +141,11 @@
     color: #2F3B43;
     background: url('../images/ellipsis.png') no-repeat;
     border-bottom: 1px solid #9EC1E1;
-    background-position:155px 25px ;
+    
   }
 
 
-  .second {
-    border-bottom: none;
-  }
+  
 
   .input-text-head:focus {
     outline: none;
@@ -227,6 +213,181 @@
     cursor: pointer;
     }
 
+    .input-text-head, .input-submit-head {
+      cursor: pointer;
+    }
+  
+    .input-text-head {
+      border:none;
+      font-style: normal;
+      text-align: left;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 22px;
+      /* identical to box height */
+      width:221px;
+      height:52px;
+      color: #2F3B43;
+      background: url('../images/ellipsis.png') no-repeat;
+      background-position:  center right ;
+      
+    }
+    
+    
+  
+    .input-submit-head {
+      background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
+      padding: 27px 41px 27px 40px;
+      margin:12px 11px 12px 20px;
+      color:white;
+      border:none;
+      text-transform: uppercase;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 22px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  
+    .location-dropdown {
+      width: 542px !important;
+      text-align: left;
+      padding:0 !important;
+      border-radius: 3px;
+      
+    }
+  
+    .search-location {
+      width: 466px;
+      background: #FFFFFF;
+      font-size: 18px;
+      line-height: 22px;
+      color: #2F3B43;
+      border: 1px solid RGBA(74,82,94,0.3);
+      
+      box-sizing: border-box;
+      border-radius: 5px;
+      height: 51px;
+      padding: 13px 20px;
+      margin: 27px 38px 6px;
+    }
+    
+    .search-location::placeholder {
+      color: #C9CBCF;
+    }
+    
+    input[type="search"]::-webkit-search-cancel-button  {
+        -webkit-appearance: none;
+        height: 14px;
+        width: 14px;
+        background: url('../images/Union.svg') no-repeat;
+    }
+    
+    .search-location:focus {
+      outline: none !important;
+      border: 2px solid RGBA(74,82,94,0.3);
+    }
+  
+    .uk-active  {
+      margin-bottom: 12px !important;
+    }
+    
+    .uk-dropdown-close-bedrooms {
+      margin-bottom: 6px;
+    }
+    
+    .uk-active label {
+      margin: 0;
+      cursor: pointer;
+      font-family: "Lato-Regular";
+      font-size: 18px;
+      line-height: 22px;
+      margin-bottom:12px;
+      
+    }
+    
+    .uk-active label:hover {
+      color: #5570BA;
+    }
+    
+    .uk-active .label-last {
+      margin-bottom:0; 
+    }
+  
+    .list-variants {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      background: #F2F4F7;
+      padding: 9px 38px 32px !important;
+    }
+    
+    
+    
+    .list-variants li {
+      font-family: 'Lato-Regular';
+      font-size: 18px;
+      line-height: 22px;
+      margin-right: 20px;
+      border-bottom: 1px solid RGBA(47,59,67,0.7);
+      color: #2F3B43;
+      opacity: 0.7;
+      margin-top: 15px;
+      cursor: pointer;
+    }
+  
+    .price-dropdown, .area-dropdown {
+      width: 445px !important;
+      padding:0 !important;
+    }
+  
+    .input-price {
+      width:150px;
+      height: 51px;
+      padding:13px 21px;
+      color: #2F3B43;
+      border: 1px solid RGBA(74,82,94,0.3);
+      border-radius: 5px;
+      font-size: 18px;
+      line-height: 22px;
+      color: #2F3B43;
+    }
+    
+    .input-distance {
+      width:182px;
+      margin-top:-6px;
+    }
+    .wrapper-price-inputs {
+      margin: 26px 37px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .input-price:focus, .input-area:focus {
+      outline: none !important;
+      border: 2px solid RGBA(74,82,94,0.3);
+    }
+    
+    .input-price::placeholder,.input-area::placeholder  {
+      font-size: 18px;
+      line-height: 22px;
+      /* identical to box height */  
+      color: #C9CBCF;
+    }
+    .price-button  {
+      width: 55px;
+      height: 51px;
+      background-image: url('../images/button-price-image.svg'), linear-gradient(290.75deg, #F34B31 -11.35%, #FFA782 106.98%);
+      background-repeat: no-repeat;
+      background-position: center;
+      outline: none;
+      border: none;
+      border-radius: 3px;
+    }
+
 
     .text-index-title {
         display: block;
@@ -245,11 +406,10 @@
     color: #2F3B43;
     background: url('../images/ellipsis.png') no-repeat;
     
-    background-position:155px 25px ;
+    background-position:center right ;
     }
 
     .second {
-        background-position:65px 25px ;
         border-left: none;
         padding-left: 0;
     }
