--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -25,7 +25,7 @@
                 
                 <h2 class="project-title-index"><%= project.title %></h2>
                <h5 class="project-short-info">  <%= project.area %> м2 | <%= project.bedrooms %> спальни</h5>
-                <a class="project-price-index" href="/projects/<%= project.id %>"><div>Цена от: <%= project.price %> $</div></a>
+                <a class="project-price-index" href="/projects/<%= project.id %>"><div><%= project.price %> $</div></a>
                 
             </div> 
         <% }); %>
