--- a/views/index.ejs
+++ b/views/index.ejs
@@ -324,6 +324,7 @@
     };
 
     var swiperProjects = new Swiper('.swiper-container', {
+    preloadImages: false,
     lazy: true,
     centeredSlides: true,
     slidesPerView: 'auto',
@@ -347,7 +348,8 @@
   });
 
   var swiperArticles = new Swiper('.swiper-container-articles', {
-    lazy: true,
+    preloadImages: false,
+    lazy: true,   
     centeredSlides: true,
     slidesPerView: 'auto',
     spaceBetween: 20,
